--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Production-Ready Barcode Scanner</title>
+  <title>Working Barcode Scanner</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
       margin: 0;
       padding: 0;
-      background: #f9f9f9;
-      color: #333;
+      background: #f4f4f4;
     }
     h1 {
       margin: 20px 0;
@@ -23,38 +22,24 @@
       max-width: 400px;
       height: auto;
       border: 2px solid #ccc;
-      margin: 20px 0;
-      display: none;
+      margin-top: 20px;
     }
-    #startButton {
+    button {
+      margin: 20px 0;
       padding: 10px 20px;
       font-size: 1.2em;
-      margin-top: 20px;
-      cursor: pointer;
-      background: #007BFF;
-      color: #fff;
+      background-color: #007BFF;
+      color: white;
       border: none;
       border-radius: 5px;
-      transition: background 0.3s ease;
+      cursor: pointer;
     }
-    #startButton:hover {
-      background: #0056b3;
+    button:hover {
+      background-color: #0056b3;
     }
-    #result {
-      font-size: 1.2em;
+    #output {
       margin: 20px;
-    }
-    #history {
-      max-height: 150px;
-      overflow-y: auto;
-      padding: 10px;
-      background: white;
-      border: 1px solid #ccc;
-      margin: 20px auto;
-      width: 90%;
-      max-width: 400px;
-      font-size: 0.9em;
-      text-align: left;
+      font-size: 1.2em;
     }
     #error {
       color: red;
@@ -64,65 +49,50 @@
 </head>
 <body>
   <h1>Barcode Scanner</h1>
-  <button id="startButton">Start Scanner</button>
+  <button id="startScanner">Start Scanner</button>
   <video id="video" autoplay muted playsinline></video>
-  <div id="result">Scanned Result: <span id="scannedText">None</span></div>
-  <div id="history"><strong>Scan History:</strong></div>
+  <div id="output">Scanned Result: <span id="scannedText">None</span></div>
   <div id="error"></div>
 
   <script type="module">
     import { BrowserMultiFormatReader } from 'https://cdn.jsdelivr.net/npm/@zxing/library@0.21.3/esm/index.min.js';
 
-    const startButton = document.getElementById('startButton');
     const video = document.getElementById('video');
-    const resultText = document.getElementById('scannedText');
-    const historyDiv = document.getElementById('history');
+    const startScannerButton = document.getElementById('startScanner');
+    const scannedText = document.getElementById('scannedText');
     const errorDiv = document.getElementById('error');
-    const reader = new BrowserMultiFormatReader();
 
-    async function startScanner() {
-      // Reset UI elements
-      resultText.textContent = 'None';
-      errorDiv.textContent = '';
-      historyDiv.innerHTML = '<strong>Scan History:</strong>';
-      video.style.display = 'none';
+    const scanner = new BrowserMultiFormatReader();
 
+    async function initializeScanner() {
       try {
-        // Request camera access
+        // Request the rear-facing camera
         const stream = await navigator.mediaDevices.getUserMedia({
           video: { facingMode: { ideal: 'environment' } }
         });
 
-        // Attach the video stream
         video.srcObject = stream;
         video.style.display = 'block';
+        errorDiv.textContent = '';
 
-        // Start decoding barcodes
-        reader.decodeFromVideoDevice(null, video, (result, err) => {
+        scanner.decodeFromVideoDevice(null, video, (result, err) => {
           if (result) {
-            const code = result.text;
-            if (code !== resultText.textContent) {
-              resultText.textContent = code;
-
-              // Append to scan history
-              const historyItem = document.createElement('div');
-              historyItem.textContent = code;
-              historyDiv.appendChild(historyItem);
-            }
+            scannedText.textContent = result.text;
           }
           if (err && !(err instanceof ZXing.NotFoundException)) {
             console.error(err);
-            errorDiv.textContent = `Error: ${err.message}`;
+            errorDiv.textContent = `Decoding error: ${err.message}`;
           }
         });
       } catch (err) {
         console.error(err);
-        errorDiv.textContent = 'Camera access is required to use the scanner.';
+        errorDiv.textContent = 'Error accessing camera: ' + err.message;
       }
     }
 
-    // Event listener for starting the scanner
-    startButton.addEventListener('click', startScanner);
+    startScannerButton.addEventListener('click', () => {
+      initializeScanner();
+    });
   </script>
 </body>
 </html>
