--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html>
   <head>
@@ -34,7 +33,6 @@
 
       ga('create', 'UA-56318310-1', 'auto');
       ga('send', 'pageview');
-
     </script>
   </head>
   <body>
@@ -43,114 +41,72 @@
         <h1><a href="/quaggaJS/"><img src="/quaggaJS/assets/code128.png" alt="QuaggaJS" /></a></h1>
         <p>An advanced barcode-reader written in JavaScript</p>
 
-        
-
-       
         <h1>Examples</h1>
+        <ul>
+          <li><a href="static_images.html">Demo with sample images</a></li>
+          <li><a href="live_w_locator.html">Demo with live-stream</a> using <code>getUserMedia</code></li>
+          <li><a href="file_input.html">Demo with file-input</a> showcasing a use for mobile</li>
+        </ul>
+      </header>
+      <section id="container" class="container">
+        <h3>The user's camera</h3>
+        <p>If your platform supports the <strong>getUserMedia</strong> API call, you
+          can try the real-time locating and decoding features. Simply allow the page to access your web-cam and point it to a barcode.</p>
+        <div id="scanner-container">
+          <video id="camera-feed" autoplay></video>
+          <p id="result"></p>
+        </div>
+        <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script src="//webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script>
+        <script src="libs/quagga.js" type="text/javascript"></script>
+        <script src="live_w_locator.js" type="text/javascript"></script>
+        <script>
+          // Camera initialization with Quagga
+          async function startScanner() {
+            try {
+              const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
+              const video = document.getElementById('camera-feed');
+              video.srcObject = stream;
 
-<ul>
-    <li><a href="static_images.html">Demo with sample images</a></li>
-    <li><a href="live_w_locator.html">Demo with live-stream</a> using <code>getUserMedia</code></li>
-    <li><a href="file_input.html">Demo with file-input</a> showcasing a use for mobile</li>
-</ul>
+              Quagga.init({
+                inputStream: {
+                  name: "Live",
+                  type: "LiveStream",
+                  target: video,
+                  constraints: {
+                    width: 640,
+                    height: 480,
+                    facingMode: "environment"
+                  },
+                },
+                decoder: {
+                  readers: ["code_128_reader", "ean_reader", "ean_8_reader"],
+                },
+              }, (err) => {
+                if (err) {
+                  console.error(err);
+                  return;
+                }
+                Quagga.start();
+              });
 
-<section id="container" class="container">
-    <h3>The user's camera</h3>
-    <p>If your platform supports the <strong>getUserMedia</strong> API call, you
-        can try the real-time locating and decoding features.
-        Simply allow the page to access your web-cam and point it to a barcode.</p>
-    <p>The various options available allow you to adjust the decoding
-        process to your needs (Type of barcode, resolution, ...)</p>
-    <div class="controls">
-        <fieldset class="input-group">
-            <button class="stop">Stop</button>
-        </fieldset>
-        <fieldset class="reader-config-group">
-            <label>
-                <span>Barcode-Type</span>
-                <select name="decoder_readers">
-                    <option value="code_128" selected="selected">Code 128</option>
-                    <option value="code_39">Code 39</option>
-                    <option value="code_39_vin">Code 39 VIN</option>
-                    <option value="ean">EAN</option>
-                    <option value="ean_extended">EAN-extended</option>
-                    <option value="ean_8">EAN-8</option>
-                    <option value="upc">UPC</option>
-                    <option value="upc_e">UPC-E</option>
-                    <option value="codabar">Codabar</option>
-                    <option value="i2of5">I2of5</option>
-                    <option value="2of5">Standard 2 of 5</option>
-                    <option value="code_93">Code 93</option>
-                </select>
-            </label>
-            <label>
-                <span>Resolution (long side)</span>
-                <select name="input-stream_constraints">
-                    <option value="320x240">320px</option>
-                    <option selected="selected" value="640x480">640px</option>
-                    <option value="800x600">800px</option>
-                    <option value="1280x720">1280px</option>
-                    <option value="1600x960">1600px</option>
-                    <option value="1920x1080">1920px</option>
-                </select>
-            </label>
-            <label>
-                <span>Patch-Size</span>
-                <select name="locator_patch-size">
-                    <option value="x-small">x-small</option>
-                    <option value="small">small</option>
-                    <option selected="selected" value="medium">medium</option>
-                    <option value="large">large</option>
-                    <option value="x-large">x-large</option>
-                </select>
-            </label>
-            <label>
-                <span>Half-Sample</span>
-                <input type="checkbox" checked="checked" name="locator_half-sample" />
-            </label>
-            <label>
-                <span>Workers</span>
-                <select name="numOfWorkers">
-                    <option value="0">0</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option selected="selected" value="4">4</option>
-                    <option value="8">8</option>
-                </select>
-            </label>
-            <label>
-                <span>Camera</span>
-                <select name="input-stream_constraints" id="deviceSelection">
-                </select>
-            </label>
-            <label style="display: none">
-                <span>Zoom</span>
-                <select name="settings_zoom"></select>
-            </label>
-            <label style="display: none">
-                <span>Torch</span>
-                <input type="checkbox" name="settings_torch" />
-            </label>
-        </fieldset>
-    </div>
-    <div id="result_strip">
-        <ul class="thumbnails"></ul>
-    </div>
-    <div id="interactive" class="viewport"></div>
-</section>
+              Quagga.onDetected((data) => {
+                document.getElementById('result').innerText = `Detected: ${data.codeResult.code}`;
+              });
 
-<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="//webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script>
-<script src="libs/quagga.js" type="text/javascript"></script>
-<script src="live_w_locator.js" type="text/javascript"></script>
+            } catch (error) {
+              document.getElementById('result').innerText = "Camera access denied or error.";
+            }
+          }
 
-
+          // Start scanning
+          window.addEventListener('load', startScanner);
+        </script>
       </section>
       <footer>
         <p>This project is maintained by <a href="http://github.com/serratus">Christoph Oberhofer</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="https://serratus.github.io/quaggaJS/javascripts/scale.fix.js"></script>
   </body>
 </html>
