--- a/index.html
+++ b/index.html
@@ -143,5 +143,43 @@
     <script src="libs/quagga.js" type="text/javascript"></script>
     <script src="live_w_locator.js" type="text/javascript"></script>
     <script src="https://serratus.github.io/quaggaJS/javascripts/scale.fix.js"></script>
+    <script>
+          // Camera initialization with Quagga
+          async function startScanner() {
+            try {
+              const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
+              const video = document.getElementById('camera-feed');
+              video.srcObject = stream;
+              Quagga.init({
+                inputStream: {
+                  name: "Live",
+                  type: "LiveStream",
+                  target: video,
+                  constraints: {
+                    width: 640,
+                    height: 480,
+                    facingMode: "environment"
+                  },
+                },
+                decoder: {
+                  readers: ["code_128_reader", "ean_reader", "ean_8_reader"],
+                },
+              }, (err) => {
+                if (err) {
+                  console.error(err);
+                  return;
+                }
+                Quagga.start();
+              });
+              Quagga.onDetected((data) => {
+                document.getElementById('result').innerText = `Detected: ${data.codeResult.code}`;
+              });
+            } catch (error) {
+              document.getElementById('result').innerText = "Camera access denied or error.";
+            }
+          }
+          // Start scanning
+          window.addEventListener('load', startScanner);
+        </script>
   </body>
 </html>
