--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <div class="controls">
           <fieldset class="input-group">
             <button class="stop">Stop</button>
+            <button id="startScanner">Start Scanner</button>
           </fieldset>
           <fieldset class="reader-config-group">
             <label>
