--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
         <div class="controls">
           <fieldset class="input-group">
             <button class="stop">Stop</button>
-            <button id="startScanner">Start Scanner</button>
           </fieldset>
           <fieldset class="reader-config-group">
             <label>
@@ -80,7 +79,7 @@
             </label>
             <label>
               <span>Resolution (long side)</span>
-              <select name="input-stream_constraints">
+              <select name="inputStream_constraints">
                 <option value="320x240">320px</option>
                 <option selected="selected" value="640x480">640px</option>
                 <option value="800x600">800px</option>
@@ -91,7 +90,7 @@
             </label>
             <label>
               <span>Patch-Size</span>
-              <select name="locator_patch-size">
+              <select name="locator_patchSize">
                 <option value="x-small">x-small</option>
                 <option value="small">small</option>
                 <option selected="selected" value="medium">medium</option>
@@ -101,7 +100,7 @@
             </label>
             <label>
               <span>Half-Sample</span>
-              <input type="checkbox" checked="checked" name="locator_half-sample" />
+              <input type="checkbox" checked="checked" name="locator_halfSample" />
             </label>
             <label>
               <span>Workers</span>
@@ -115,7 +114,7 @@
             </label>
             <label>
               <span>Camera</span>
-              <select name="input-stream_constraints" id="deviceSelection"></select>
+              <select name="inputStream_constraints_deviceId" id="deviceSelection"></select>
             </label>
             <label style="display: none">
               <span>Zoom</span>
@@ -133,10 +132,11 @@
         <div id="interactive" class="viewport"></div>
       </section>
 
-    
-    <script src="//webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script>
-    <script src="libs/quagga.js" type="text/javascript"></script>
-    <script src="live_w_locator.js" type="text/javascript"></script>
+      <!-- Include latest adapter.js -->
+      <script src="https://webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script>
+      <!-- Include latest Quagga2 library -->
+      <script src="https://unpkg.com/@ericblade/quagga2@latest/dist/quagga.min.js" type="text/javascript"></script>
+      <script src="live_w_locator.js" type="text/javascript"></script>
 
       <footer>
         <p>This project is maintained by <a href="https://github.com/serratus">Christoph Oberhofer</a></p>
@@ -144,8 +144,7 @@
       </footer>
     </div>
 
-  
-    
+    <!-- Include scale.fix.js if necessary -->
+    <script src="https://serratus.github.io/quaggaJS/javascripts/scale.fix.js"></script>
   </body>
-  <script src="https://serratus.github.io/quaggaJS/javascripts/scale.fix.js"></script>
 </html>
