--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <p><strong>Note:</strong> Please enable camera permissions when prompted to ensure the barcode scanner works correctly.</p>
         <div class="controls">
           <fieldset class="input-group">
-            <button class="start">Stop</button>
-            <button class="stop scanner">Stop</button>
+            <button class="start">Start Scanner</button>
+            <button class="stop">Stop Scanner</button>
           </fieldset>
           <fieldset class="reader-config-group">
             <label>
