--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
     </header>
 
     <section id="container" class="container">
-      <h3>The user's camera</h3>
-      <p>If your platform supports the <strong>getUserMedia</strong> API call, you can try the real-time locating and decoding features. Simply allow the page to access your web-cam and point it to a barcode.</p>
-      <p>The various options available allow you to adjust the decoding process to your needs (Type of barcode, resolution, ...).</p>
+      <h3>The User's Camera</h3>
+      <p>If your platform supports the <strong>getUserMedia</strong> API call, you can try the real-time locating and decoding features. Simply allow the page to access your webcam and point it to a barcode.</p>
+      <p>The various options available allow you to adjust the decoding process to your needs (Type of barcode, resolution, etc.).</p>
       <p><strong>Note:</strong> Please enable camera permissions when prompted to ensure the barcode scanner works correctly.</p>
       <div class="controls">
         <fieldset class="input-group">
